small formatting changes

--- a/2 Unit One Content/Data Levels of Measurement and Sampling.html
+++ b/2 Unit One Content/Data Levels of Measurement and Sampling.html
@@ -33,11 +33,9 @@
                         When collecting data it is important to implement an appropriate sampling method so that the
                         data can be used to learn something about the population that it originated. This section will
                         detail data types as well as the common sampling methods used to collect that data.</p>
-
                     <h2>Data Classification</h2>
                     <p>Data originates from either a population or a sample and can be classified into two main
                         categories: <strong>Qualitative Data</strong> and <strong>Quantitative Data</strong>.</p>
-
                     <div class="definition">
                         <h2 class="definition-header">Definition: Qualitative Data</h2>
                         <p>Qualitative data (or categorical data) categorizes or describes attributes of a population,
@@ -46,14 +44,13 @@
                             generally suited for mathematical analysis meaning that averages or standard deviations are
                             not meaningful (e.g. you wouldn't be able to average hair colors).</p>
                     </div>
-
                     <div class="definition">
                         <h2 class="definition-header">Definition: Quantitative Data</h2>
                         <p>Quantitative data represents numerical values obtained by counting or measuring attributes.
                             Examples include weight, pulse rate, the number of people/objects, etc. Quantitative data is
                             further divided into two subcategories:</p>
                         <ul>
-                            <li><b><span class="blanked">Discrete data</span></b> results when the number of possible values is either a finite
+                            <li><span class="blanked"><b>Discrete data</b></span> results when the number of possible values is either a finite
                                 number or a “countable” number (i.e. the number of possible values is 0, 1, 2, 3, . . .
                                 ). Examples might include number of phone calls: 0 calls, 1 call, 2 calls, etc.</li>
                             <li><span class="blanked"><b>Continuous data</b></span> results from infinitely many possible values that correspond to
@@ -61,12 +58,11 @@
                                 jumps. This includes almost any measurement of distance, time, volume, temperature,
                                 mass, or combination of any of these. For example, weights like 2.4 grams and 7.5 pounds
                                 would be continuous data since the scale they originate from has infinite divisions
-                                (i.e. you could get the measurement as precise as possible). </li>
+                                (i.e. you could get the measurement as precise as possible).</li>
                         </ul>
                     </div>
-
                     <div class="example">
-                        <h2 class="example-header">Example 1: Discrete vs Continuous Data </h2>
+                        <h2 class="example-header">Example 1: Discrete vs Continuous Data</h2>
                         <p>Determine the correct data type (quantitative or qualitative). For data that is quantitative,
                             indicate whether it is continuous or discrete. Hint: Data that are discrete often start with
                             the words "the number of."</p>
@@ -81,7 +77,6 @@
                             <li>Amount of money you spend at the local Quickmart</li>
                         </ol>
                     </div>
-
                     <div class="solution">
                         <h2 class="solution-header">Solution: Discrete vs Continuous Data</h2>
                         <ol type="a">
@@ -96,30 +91,26 @@
                                 down money past cents so money doesn't use a continuous scale of measurement)</li>
                         </ol>
                     </div>
-
                     <div class="example">
                         <h2 class="example-header">Example 2: Type of Data from an Image</h2>
                         <p>The registrar at State University keeps records of the number of credit hours students
                             complete each semester. The data collected are summarized in the histogram. The class
                             boundaries are 10 to less than 13, 13 to less than 16, 16 to less than 19, 19 to less than
                             22, and 22 to less than 25.</p>
-                        <img src="../images/StudentCreditHours.jpg"
+                        <img src="/content/enforced/9945978-MATH1530_STATS_OER/3 Unit One Content/../images/StudentCreditHours.jpg"
                             alt="Histogram showing 5 classes arranged in a pattern that looks like a normal distribution. The vertical axis is Number of Students. The height of the 5 bars from left to right are approximately 250, 580, 740, 625, and 240 students. The horizontal axis is credit hours completed matching the problem description.">
                     </div>
-
                     <div class="solution">
                         <h2 class="solution-header">Solution: Type of Data from an Image</h2>
                         Since students would be countable (i.e. 0 students, 1 student, 2 students, etc.) this graph
                         depicts data that is <b>Discrete Quantitative</b>.
                     </div>
-
                     <h2>Levels of Measurement</h2>
                     <p>Statistics involves understanding, analyzing, and interpreting data, and a key component is
                         determining the "level of measurement" of data. Levels of measurement are important because they
                         determine the types of statistical analyses that can be performed and ensure proper
                         interpretation of data. There are four levels of measurement: nominal, ordinal, interval, and
                         ratio. Each builds upon the previous level, providing more information about the data.</p>
-
                     <div class="definition">
                         <h2 class="definition-header">Different Levels of Measurement</h2>
                         <p><b>Nominal Level:</b> Data at this level are categorized without any order. For example,
@@ -138,7 +129,6 @@
                         <p><b>Ratio Level:</b> Data have a meaningful order, measurable differences, and a true zero
                             point, allowing for meaningful ratios. Examples include weight, height, or age.</p>
                     </div>
-
                     <div class="example">
                         <h2 class="example-header">Example Problem</h2>
                         <p>Classify the following scenarios by their level of measurement:</p>
@@ -149,7 +139,6 @@
                             <li>The time it takes for participants to complete a task, measured in seconds.</li>
                         </ol>
                     </div>
-
                     <div class="solution">
                         <h2 class="solution-header">Solution</h2>
                         <ol type="a">
@@ -162,12 +151,10 @@
                                 for ratios.</li>
                         </ol>
                     </div>
-
                     <h2>Sampling Techniques</h2>
                     <p>Sampling is used when gathering data from an entire population is impractical or too expensive. A
                         sample should represent the population's characteristics, and random sampling methods help
                         achieve this. Common random sampling techniques include:</p>
-
                     <div class="definition">
                         <h2 class="definition-header">Definition: Sampling Techniques</h2>
                         <p><b>Simple Random Sampling:</b> Every individual in the population has an equal chance of
@@ -181,22 +168,18 @@
                         <p><b>Systematic Sampling:</b> Randomly select a starting point and pick every nth member from a
                             population list. For example, choose every 50th name in a phone book for a survey.</p>
                     </div>
-
                     <p>Non-random sampling, such as convenience sampling, selects readily available participants, which
                         can lead to biased results. An example of convenience sampling might be selecting the first 20
                         customers entering a coffee shop: this sample is not random and will likely be biased in some
                         way. Sampling errors (e.g., small sample sizes) and nonsampling errors (e.g., data entry
                         mistakes) can also affect results. Larger samples tend to reduce sampling error, but sampling
                         bias occurs if some members have unequal chances of selection.</p>
-
                     <p>Critical evaluation of studies is essential. Issues to consider include representativeness,
                         sample size, undue influence, causality, and potential confounding factors.</p>
-
                     <div class="example">
                         <h2 class="example-header">Example 3: Identify Sampling Techniques</h2>
                         <p>A study intends to determine the average tuition paid by Tennessee Technological University
-                            undergraduate
-                            students per semester. Identify the sampling method used in each scenario:</p>
+                            undergraduate students per semester. Identify the sampling method used in each scenario:</p>
                         <ol type="a">
                             <li>Organize students by year (e.g., first-year, sophomore), then select 25 from each.</li>
                             <li>Use a random number generator to select one student, then pick every 50th student until
@@ -208,7 +191,6 @@
                             </li>
                         </ol>
                     </div>
-
                     <div class="solution">
                         <h2 class="solution-header">Solution: Identify Sampling Techniques</h2>
                         <ol type="a">
