Adding Printable Lecture 1 Notes. Also updating CSS for dynamic example numbering.

--- a/2 Unit One Content/Data Levels of Measurement and Sampling.html
+++ b/2 Unit One Content/Data Levels of Measurement and Sampling.html
@@ -50,10 +50,10 @@
                             Examples include weight, pulse rate, the number of people/objects, etc. Quantitative data is
                             further divided into two subcategories:</p>
                         <ul>
-                            <li><span class="blanked"><b>Discrete data</b></span> results when the number of possible values is either a finite
+                            <li><b>Discrete data</b> results when the number of possible values is either a finite
                                 number or a “countable” number (i.e. the number of possible values is 0, 1, 2, 3, . . .
                                 ). Examples might include number of phone calls: 0 calls, 1 call, 2 calls, etc.</li>
-                            <li><span class="blanked"><b>Continuous data</b></span> results from infinitely many possible values that correspond to
+                            <li><b>Continuous data</b> results from infinitely many possible values that correspond to
                                 some continuous scale that covers a range of values without gaps, interruptions, or
                                 jumps. This includes almost any measurement of distance, time, volume, temperature,
                                 mass, or combination of any of these. For example, weights like 2.4 grams and 7.5 pounds
