--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-<script src="../js/loadmathjax.js"></script>
-<script src="../js/navigation.js"></script>
+<script src="js/loadmathjax.js"></script>
+<script src="js/navigation.js"></script>
 
-<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
 
-<link rel="stylesheet" href="../css/main.min.css">
+<link rel="stylesheet" href="css/main.min.css">
 
-<link rel="stylesheet" href="../css/style.css" />
+<link rel="stylesheet" href="css/style.css" />
 
 </head>
 
