Syllabi changes, Lecture 1 Changes, added some images, added "about this course" content

--- a/1 Start Here/About This Course MCT.html
+++ b/1 Start Here/About This Course MCT.html
@@ -1,52 +1,63 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
-<meta charset="utf-8">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Topic - Image Bottom</title>
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- Bootstrap CDN CSS -->
-<link rel="stylesheet" href="/Shared/Content Templates/For Use/VolState_Template/VolState_Template/Template_Generic/VSTemplates/../../assets/thirdpartylib/bootstrap-3.3.6/css/bootstrap.min.css">
-<!-- Course Styles -->
-<link rel="stylesheet" href="/Shared/Content Templates/For Use/VolState_Template/VolState_Template/Template_Generic/VSTemplates/../assets/css/main.min.css">
-<style>
-iframe {border:none;}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About this Course</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <!-- Bootstrap CDN CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
+    <!-- Optional Bootstrap theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+
+    <!-- Optional Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+
+    <!-- Custom Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async="" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+    <!-- CSS Stylesheets Used in Course Content Pages -->
+    <link rel="stylesheet" href="../css/main.min.css">
+    <link rel="stylesheet" href="../css/style.css" />
+
 </head>
 
-<body class="content" role="document">
-<div class="container-fluid"><main>
-<div class="row">
-<div class="col-sm-offset-1 col-xs-offset-1 col-xs-10">
-<h1>About This Course</h1>
-<h2>What is this course about?</h2>
-<p>In this course, you will...</p>
-<h2>How is this course set up?</h2>
-<p>This course is set up in modules, each with a different topic. The intent is for you to view the content from top to bottom, completing readings, activities, and assignments along the way.</p>
-<p>A typical module will include...</p>
-<h2>How&nbsp;can I be successful?</h2>
-<p>You should plan to spend 12-15 hours per week&nbsp;engaging with course content, studying/reviewing and completing assignments. Reading your textbook and watching all of the videos posted in eLearn will help ensure that you have encountered the concepts that will be covered in the assignments. I also encourage you to participate fully in the discussion boards. By discussing concepts and linking your ideas to other students' ideas, your learning will grow and deepen.</p>
-<h2>So what do I do next?</h2>
-<p>I highly recommend watching this 2-minute video that demonstrates basic navigation in eLearn.&nbsp;</p>
-<p style="text-align: center;"><iframe src="/d2l/common/dialogs/quickLink/quickLink.d2l?ou=9945978&amp;type=lti&amp;rCode=TBR-47814657" title="eLearn Navigation" allowfullscreen="" allow="microphone *; camera *; autoplay *" height="400" width="640"></iframe></p>
-<p>Now that&nbsp;you know how to navigate eLearn and have been introduced to the course, read through all of the materials in the "Get Started Here" module, then explore the rest of the course and the tools available in eLearn.</p>
-</div>
-</div>
-</main></div>
-<!-- jQuery local fallback (Bootstrap Dependency) -->
-<p>
-<script src="/Shared/Content Templates/For Use/VolState_Template/Template_Generic/VSTemplates/../../assets/thirdpartylib/jquery/jquery-1.11.3.min.js"></script>
-</p>
-<!-- Bootstrap CDN JS -->
-<p>
-<script src="/Shared/Content Templates/For Use/VolState_Template/Template_Generic/VSTemplates/../../assets/thirdpartylib/bootstrap-3.3.6/js/bootstrap.min.js"></script>
-</p>
-<!-- Course Scripts -->
-<p>
-<script src="/Shared/Content Templates/For Use/VolState_Template/Template_Generic/VSTemplates/../assets/js/main.min.js"></script>
-</p>
+<div class="content" role="document">
+    <div class="container-fluid">
+        <main>
+            <div class="row bottom-md">
+                <div class="col-sm-offset-1 col-xs-offset-1 col-xs-10">
+                    <h1>About this Course</h1>
+    <p>Learn about the open education Introductory Statistics class you are about to take this semester!</p>
+
+    <h2>What is Introductory Statistics?</h2>
+    <p>Introductory Statistics is a foundational course that teaches students how to collect, analyze, and interpret data. It covers essential statistical methods, including descriptive statistics, probability, hypothesis testing, and inferential statistics. Students will gain valuable skills that are applicable in a variety of fields such as business, healthcare, education, and social sciences. By the end of the course, students will be able to make data-informed decisions and critically evaluate statistical claims.</p>
+
+    <h2>What is OER (Open Educational Resources)?</h2>
+    <p>Open Educational Resources (OER) are free and openly licensed educational materials that are designed to be accessible to everyone. This semester, your Introductory Statistics course will utilize OER materials, eliminating the need for costly textbooks. MyOpenMath will be the primary platform used for delivering assignments, quizzes, and exams. This approach not only saves money but also provides a flexible and interactive learning environment tailored to help you succeed.</p>
+
+    <h2>How can I be successful?</h2>
+    <p>You should plan to spend 12-15 hours per week engaging with course content, studying, reviewing, and completing assignments. Reading the textbook and watching all videos posted in eLearn will help ensure you understand the concepts covered in the assignments. Active participation in discussion boards is strongly encouraged. By discussing concepts and linking your ideas to those of other students, your learning will deepen and become more meaningful. Consistent effort and proactive engagement with the course materials will set you up for success.</p>
+                </div>
+            </div>
+        </main>
+    </div>
+    </div>
+    </div>
+    </main>
+    </div>
+    <!-- jQuery local fallback (Bootstrap Dependency) -->
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <!-- Bootstrap CDN JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Course Scripts -->
+    <script src="../js/loadmathjax.js"></script>
 </body>
 
 </html>
